Rough finished reset password
